# absolute-zero

./: .editorconfig  .gitignore  .gitlab-ci.yml  .guix-channel  .hypatia-ignore  0-AI-MANIFEST.a2ml  AI.a2ml  AUDIT.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.adoc  CURRENT-STATUS.md  Cargo.toml  ECHIDNA-NEUROSYM-INTEGRATION.adoc  ECHIDNA.adoc  ECOSYSTEM.scm  INTEGRATION-STATUS-2026-02-05.adoc  Justfile  LICENSE  LICENSE-AUDIT-2026-02-05.adoc  META.scm  PROOF-COMPLETION-PLAN.adoc  PROOF-INSIGHTS.md  PROOF-STATUS-2026-05-18.md  PROOF-STATUS.adoc  PROOF-VS-TEST-SUBJECTS.adoc  README.adoc  README.md  ROADMAP-UPDATED.adoc  ROADMAP-V1-TO-V12.adoc  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SESSION-COMPLETE-2026-02-05.adoc  STATE.scm  absolute-zero-abi.ipkg  absolute-zero.agda-lib  codemeta.json  deno.json  guix.scm  package.json  (+1 more)
.claude/: CLAUDE.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: cflite_pr.yml  codeql.yml  deno-ci.yml  governance.yml  hypatia-scan.yml  jekyll-gh-pages.yml  language-policy.yml  proofs.yml  publish-container.yml  rescript-deno-ci.yml  rust-ci.yml  secret-scanner.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/bot_directives/: README.adoc  git-private-farm.a2ml  gitbot-fleet.a2ml  hypatia.a2ml
.migration/: RUBY_TO_RUST.md
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
docs/: CITATIONS.adoc  CLAUDE.adoc  COOKBOOK.adoc  JUSTFILE-COOKBOOK.adoc  MACHINE_VERIFICATION.adoc  OND-PILLAR-STRUCTURE.adoc  OND-ROADMAP.adoc  PROOF-CLASSIFICATION.adoc  PROOF-COMPLETION-PLAN.adoc  PROOF-INSIGHTS.md  PROOF-VS-TEST-SUBJECTS.adoc  TWO-PILLARS.adoc  VERIFICATION_RESULTS.adoc  proof-debt-triage.md  proof-debt.md  tech-debt-2026-05-26.md
docs/wiki/: ABI.md  (+11 more)
fuzz/: Cargo.toml
proofs/: verify-all-provers.sh
scripts/: use-echidna.sh
src/: AuditTrail.res  main.rs
src/brainfuck/: Cargo.toml
src/brainfuck/src/: lib.rs  main.rs
src/whitespace/: Cargo.toml
src/whitespace/src/: lib.rs
tests/: README.adoc
tools/: README.adoc
verification/: README.adoc  run-local-verification.sh  setup-and-verify.sh  verify-proofs.sh
(+93 files in other folders)
