# SPDX-License-Identifier: MPL-2.0-or-later
[package]
name = "absolute_zero-fuzz"
version = "0.0.0"
authors = ["hyperpolymath"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.absolute_zero]
path = ".."

[[bin]]
name = "fuzz_input"
path = "fuzz_targets/fuzz_input.rs"
test = false
doc = false
bench = false
