[package]
name = "brainfuck-cno"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan@hyperpolymath.org>"]
description = "Brainfuck interpreter with CNO (Certified Null Operation) detection"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/absolute-zero"

[lib]
name = "brainfuck_cno"
path = "src/lib.rs"

[[bin]]
name = "brainfuck"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
